# sconsUtils

./: .gitignore  .pre-commit-config.yaml  .sconsign.dblite  COPYRIGHT  LICENSE  README  README.md  SConstruct  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yaml  build_docs.yaml
.sconf_temp/: conftest_1.c  conftest_2.c  conftest_3  conftest_3.c
bin.src/: install_from_eups  makeLinkFarm  sconsOpts
configs/: apr.cfg  apr_util.cfg  boost.cfg  boost_filesystem.cfg  boost_math.cfg  boost_program_options.cfg  boost_regex.cfg  boost_serialization.cfg  boost_system.cfg  boost_test.cfg  boost_thread.cfg  boost_timer.cfg  cfitsio.cfg  eigen.cfg  fftw.cfg  galsim.cfg  gsl.cfg  healpix_cxx.cfg  log4cxx.cfg  minuit2.cfg  nanobind.cfg  ndarray.cfg  numpy.cfg  pybind11.cfg  python.cfg  starlink_ast.cfg  xpa.cfg
doc/: SConscript  conf.py  documenteer.toml  doxygen.conf.in  index.rst  manifest.yaml
doc/lsst.sconsUtils/: index.rst
python/LSST/: SConsUtils.py  doxygen.py
python/lsst/: SConsUtils.py  __init__.py  doxygen.py  hg.py  svn.py  tests.py
python/lsst/scons/: SConsUtils.py  doxygen.py  svn.py
python/lsst/sconsUtils/: __init__.py  builders.py  compile_commands.py  configure.py  dependencies.py  deprecated.py  environment.py  eupsForScons.py  install.py  installation.py  scripts.py  state.py  tests.py  utils.py
python/lsst/sconsUtils/tools/: cuda.py
python/lsst/sconsUtils/vcs/: __init__.py  git.py  hg.py  svn.py
tests/: SConscript  testAll.py  testSingle.py  test_all.py  test_run_by_scons.py  test_simple.py
tests/testFailedTests/: SConstruct
trunk/python/lsst/: SConsUtils.py  __init__.py
trunk/ups/: sconsDistrib.table  sconsUtils.build  sconsUtils.manifest.list
ups/: pkgbuild  scons.build  scons.manifest.list  scons.table  sconsDistrib.build  sconsDistrib.table  sconsUtils.bld  sconsUtils.build  sconsUtils.cfg  sconsUtils.manifest.list  sconsUtils.pacman.m4  sconsUtils.table
v1.9/: README
v1.9/python/lsst/: SConsUtils.py
